fixed map dimensions & radio button container alignment

--- a/var/www/html/styles.css
+++ b/var/www/html/styles.css
@@ -4,7 +4,7 @@ body { margin: 0 auto;
 }
 /* Give the map a specific height AND width */
 #map {
-    height: 600px; /* Increased height for better visibility */
+    height: 700px; /* Increased height for better visibility */
     width: 100%;   /* Make it take the full width of its container */
 }
 #body-text {
@@ -22,7 +22,7 @@ body { margin: 0 auto;
     position: fixed;
     left: 0; /*adjust this to change its placement*/
     right: 0; /* Move to the right side */
-    top: 310px; /*align from top*/
+    top: 380px; /*align from top*/
     z-index: 1000;
     background: #C1D8C3;
     width: 200px;      /* Set a wider width */
@@ -40,7 +40,7 @@ body { margin: 0 auto;
     position: fixed;
     left: 0; /*adjust this to change its placement*/
     right: 0; /* Move to the right side */
-    top: 485px; /*align from top*/
+    top: 554px; /*align from top*/
     z-index: 1000;
     background: #C1D8C3;
     width: 200px;      /* Set a wider width */
